# rasp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kuru/raspeval/: ExampleInstrumentedTest.kt
app/src/main/assets/: ReadMe.txt
app/src/main/java/com/kuru/raspeval/api/: Bootstrap.kt  EvalProvider.kt  RaspEval.kt
app/src/main/java/com/kuru/raspeval/attacks/: AttackDefinition.kt  ExampleAttacks.kt  OfflineMalwareScanAttack.kt
app/src/main/java/com/kuru/raspeval/core/: AttackLayer.kt  AttackOrchestration.kt  AttackOrchestrator.kt  AttackPriority.kt  AttackRequirement.kt  AttackResult.kt  EvalDatabase.kt  EvalDomainEntity.kt  NativeAttackHarness.kt  Priority.kt  RASPAttackLayer.kt  RASPAttackRequirement.kt  RASPAttackResult.kt  RASPDataBase.kt  RASPInitProvider.kt  RASPPriority.kt  RASPThreat.kt  RASPThreatPubSub.kt  RaspAttackCase.kt  RaspEvalBootstrap.kt  RaspEvalProvider.kt  RaspTestCase.kt  TestLayer.kt  TestRequirement.kt  TestResult.kt  Threat.kt  ThreatEventStream.kt
app/src/main/java/com/kuru/raspeval/tests/: RASPTestRepository.kt  TestRepository.kt
app/src/main/java/com/kuru/raspeval/tests/examples/: Test_13_RuntimeCodeInjectionHalt.kt  Test_55_LowLevelNativeCallInterception.kt  Test_6_AppTamperRepackage.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
app/src/test/java/com/kuru/raspeval/: ExampleUnitTest.kt
gradle/: libs.versions.toml
